--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "npm run android & npm run ios"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -29,6 +30,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.29",
     "@types/styled-components-react-native": "^5.2.4",
