--- a/ios/pinky/Info.plist
+++ b/ios/pinky/Info.plist
@@ -73,5 +73,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>NMFClientId</key>
+  <string>jfvi1u7ors</string>
 </dict>
 </plist>
