--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "dev": "npm run android & npm run ios"
     },
     "dependencies": {
+        "@react-native-google-signin/google-signin": "^10.1.0",
         "@react-navigation/bottom-tabs": "^6.5.11",
         "@react-navigation/native": "^6.1.9",
         "@react-navigation/native-stack": "^6.9.17",
