Ready to using google login.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
+            storeFile file('debug2.keystore')
             storePassword 'android'
-            keyAlias 'androiddebugkey'
+            keyAlias 'debug'
             keyPassword 'android'
         }
     }
